# encryptable

./: Cargo.toml  LICENSE  README.md
src/: crypt.rs  lib.rs
tests/: macros.rs
