[package]
name = "encryptable"
authors = ["Abdulsemiu Atanda <semiu@live.com>"]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lib]
name="encryptable"
path="src/lib.rs"
proc-macro=true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "proc-macro", "parsing", "derive"] }

[dev-dependencies]
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.9"
